--- a/style.css
+++ b/style.css
@@ -12,6 +12,108 @@
   transition: 0.7s;
 }
 
+.internetex {
+  position: fixed;
+  z-index: 32423423423423432;
+  background-color: rgba(0, 0, 0, 0.933);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.innerexp {
+  width: 500px;
+  height: 340px;
+  background-color: white;
+}
+
+.headingexp {
+  color: black;
+  font-size: 40px;
+  width: 100%;
+  height: 20%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.buttonexpdiv {
+  width: 100%;
+  height: 20%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+
+#expbutton {
+  outline: none;
+  border-radius: 20px;
+  border: none;
+  background-color: skyblue;
+  color: white;
+  font-size: 25px;
+  padding: 5px 10px;
+  height: auto;
+  width: auto;
+}
+
+.detailparadiv {
+  color: #434343;
+  font-size: 16px;
+  width: 100%;
+  position: relative;
+  height: 60%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+}
+
+#expdetailpara span {
+  color: red;
+}
+
+#expopeninpara {
+  color: #15548a !important;
+  margin-top: 4px;
+}
+
+.exppara {
+  max-width: 400px !important;
+}
+
 /* scroll bar  */
 ::-webkit-scrollbar {
   width: 10px;
@@ -81,7 +183,6 @@ html {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
