--- a/style.scss
+++ b/style.scss
@@ -58,6 +58,9 @@ transition: 0.7s;
     height: auto;
     width: auto;
 }
+#expbutton:hover{
+    cursor: pointer;
+}
 
 .detailparadiv{
     color: rgb(67, 67, 67);
