--- a/style.css
+++ b/style.css
@@ -331,6 +331,9 @@ html {
   .headerheading {
     font-size: 6rem !important;
   }
+  .logo {
+    width: 13rem !important;
+  }
 }
 
 @media only screen and (min-width: 470px) and (max-width: 549px) {
@@ -340,6 +343,9 @@ html {
   }
   .hbtn {
     font-size: 2.3rem !important;
+  }
+  .logo {
+    width: 12rem !important;
   }
 }
 
@@ -351,6 +357,9 @@ html {
   .hbtn {
     font-size: 2.2rem !important;
   }
+  .logo {
+    width: 11rem !important;
+  }
 }
 
 @media only screen and (min-width: 300px) and (max-width: 359px) {
@@ -361,17 +370,40 @@ html {
   .hbtn {
     font-size: 2.1rem !important;
   }
+  .logo {
+    width: 10rem !important;
+  }
 }
-
 @media only screen and (min-width: 200px) and (max-width: 299px) {
   .headerheading {
     font-size: 3rem !important;
-    max-width: 250px;
+  }
+  #headerheadingparent {
+    max-width: 150px !important;
   }
   .hbtn {
-    font-size: 1.7rem !important;
+    font-size: 2rem !important;
+  }
+  .logo {
+    width: 9rem !important;
   }
 }
+@media only screen and (min-width: 200px) and (max-width: 299px) and (max-height: 400px) {
+  .headerheading {
+    font-size: 2rem !important;
+  }
+  #headerheadingparent {
+    max-width: 120px !important;
+  }
+  .hbtn {
+    font-size: 1.3rem !important;
+  }
+  .logo {
+    width: 9rem !important;
+  }
+}
+
+
 
 #headerfigure {
   min-width: 100vw;
